--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -5,7 +5,7 @@
         "color_palette": "Color Palette",
         "opacity": "Opacity",
         "default_color_palette": "Default",
-        "size":"Size",
+        "size": "Size",
         "min_domain": "Domain Min",
         "max_domain": "Domain Max",
         "range": "Range",
@@ -13,8 +13,8 @@
         "numberFormat": "Number format",
         "timeFormat": "Time format",
         "normalizedNumberFormat": "Normalized number format",
-        "background": "Background",        
-        "color":"Color",
+        "background": "Background",
+        "color": "Color",
         "independence": "Independence",
         "x": "x-Axis",
         "y": "y-Axis",
@@ -29,6 +29,7 @@
         "row_count": "Row count",
         "mea_key": "Measure names",
         "mea_val": "Measure values",
+        "paint_key": "Paint Field",
         "analytic_type": {
             "dimension": "dimension",
             "measure": "measure"
@@ -180,7 +181,7 @@
                 "undo": "Undo",
                 "redo": "Redo"
             },
-            "askviz":{
+            "askviz": {
                 "placeholder": "What visualization your want to draw from the dataset"
             },
             "settings": {
@@ -199,7 +200,20 @@
                     "export_chart": "Export",
                     "export_chart_as": "Export as {{type}}",
                     "export_code": "Export Code",
-                    "geojson": "Geography Configuration"
+                    "geojson": "Geography Configuration",
+                    "painter": "Open Painter",
+                    "disabled_painter": "Use quantitative fields on XY and disable aggregation to create a paint"
+                },
+                "paint": {
+                    "palette": "Palette",
+                    "eraser": "Eraser",
+                    "color": "Brush Color",
+                    "label": "Brush Label",
+                    "brush_size": "Brush Size",
+                    "save_paint": "Save Painting",
+                    "reset_paint": "Reset Painting",
+                    "cancel": "Cancel",
+                    "delete_paint": "Delete Painting"
                 },
                 "limit": "Limit",
                 "size": "Resize",
