--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -68,7 +68,8 @@
         "layout_type": {
             "__enum__": "レイアウトタイプ",
             "auto": "自動",
-            "fixed": "固定"
+            "fixed": "固定",
+            "full": "コンテナー"
         },
         "exploration_mode": {
             "__enum__": "探索モード",
