--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -66,7 +66,8 @@
         "layout_type": {
             "__enum__": "尺寸模式",
             "auto": "自动",
-            "fixed": "固定"
+            "fixed": "固定",
+            "full": "容器"
         },
         "exploration_mode": {
             "__enum__": "探索交互",
