fix: paint field tooltip

--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -203,7 +203,8 @@
                     "export_code": "导出代码",
                     "geojson": "地理信息配置",
                     "painter": "打开数据绘板",
-                    "disabled_painter": "创建绘制字段需要在XY轴使用数据类型并关闭聚合"
+                    "disabled_painter": "创建绘制字段需要关闭聚合",
+                    "disabled_painter_temporal": "绘制字段暂不支持时间字段"
                 },
                 "paint": {
                     "palette": "色板",
