--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -203,7 +203,8 @@
                     "export_code": "Export Code",
                     "geojson": "Geography Configuration",
                     "painter": "Open Painter",
-                    "disabled_painter": "Use quantitative fields on XY and disable aggregation to create a paint"
+                    "disabled_painter": "disable aggregation to create a paint",
+                    "disabled_painter_temporal": "painter doesn't support temporal fields now"
                 },
                 "paint": {
                     "palette": "Palette",
