--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -134,7 +134,7 @@
         "segments": {
             "vis": "Visualization",
             "data": "Data"
-        }, 
+        },
         "feedback": {
             "vote": "Is the result of Askviz good?",
             "voteup": "Yes",
@@ -203,7 +203,11 @@
                     "export_code": "Export Code",
                     "geojson": "Geography Configuration",
                     "painter": "Open Painter",
-                    "disabled_painter": "Use quantitative fields on XY and disable aggregation to create a paint"
+                    "disabled_painter": {
+                        "aggergation": "disable aggregation to create a paint",
+                        "temporal": "painter doesn't support temporal fields now",
+                        "count": "drag single field on x and y to create a paint"
+                    }
                 },
                 "paint": {
                     "palette": "Palette",
