--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -197,7 +197,11 @@
                     "export_code": "コードをエクスポート",
                     "geojson": "地理情報設定",
                     "painter": "データキャンバスを開く",
-                    "disabled_painter": "データキャンバスを作るには数量尺度フィールドをXY軸に設置して集計をオフにするが必要"
+                    "disabled_painter": {
+                        "aggergation": "データキャンバスを作るには集計をオフにするが必要",
+                        "temporal": "時間的フィールドはまたデータキャンバスで使うことができない",
+                        "count": "データキャンバスを作るにはフィールドをXY軸に設置してください"
+                    }
                 },
                 "paint": {
                     "palette": "パレット",
