feat: vizgpt chat

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -134,7 +134,8 @@
         },
         "segments": {
             "vis": "Visualization",
-            "data": "Data"
+            "data": "Data",
+            "chat": "Chat"
         },
         "feedback": {
             "vote": "Is the result of Askviz good?",
