--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -328,7 +328,10 @@
                 "day": "日",
                 "hour": "时",
                 "minute": "分",
-                "second": "秒"
+                "second": "秒",
+                "iso_year": "ISO年",
+                "iso_week": "ISO周",
+                "iso_weekday": "ISO星期几"
             }
         }
     },
