--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -216,7 +216,7 @@
                     "cancel": "キャンセル",
                     "delete_paint": "キャンバスを削除"
                 },
-                "limit": "上限",
+                "limit": "クエリ制限 (行数) を有効にする",
                 "size": "サイズ変更",
                 "size_setting": {
                     "width": "幅",
