feat: setting scales

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -3,9 +3,14 @@
         "scheme": "Scheme",
         "primary_color": "Primary Color",
         "color_palette": "Color Palette",
+        "row": "Row",
+        "column": "Column",
+        "radius": "Radius",
+        "theta": "Theta",
         "opacity": "Opacity",
         "default_color_palette": "Default",
         "size": "Size",
+        "type": "Scale Type",
         "min_domain": "Domain Min",
         "max_domain": "Domain Max",
         "range": "Range",
