feat: optimize misc config

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -29,7 +29,23 @@
         "readHere": "read here",
         "svg": "Use SVG",
         "customTile": "Use a Custom Tile for map",
-        "customOffset": "Use a Specific timezone"
+        "customOffset": "Use a Specific timezone",
+        "map_settings": "Map Settings",
+        "map_settings_desc": "Configure how map visualizations display and use custom map tile services.",
+        "customTile_desc": "Specify a custom map tile URL for geographic visualizations.",
+        "choropleth_settings": "Choropleth Settings",
+        "choropleth_settings_desc": "Control how geographic shapes and data are displayed in choropleth maps.",
+        "include_unmatched": "Include unmatched choropleth in scale",
+        "include_unmatched_desc": "Include regions without data matches when calculating color scales.",
+        "include_shapes": "Include shapes without data",
+        "include_shapes_desc": "Show all geographic shapes even if they don't have associated data values.",
+        "visualization_settings": "Visualization Settings",
+        "visualization_settings_desc": "Configure general settings for all visualizations.",
+        "zeroScale_desc": "Force numeric axes to start at zero instead of auto-scaling to data range.",
+        "svg_desc": "Use SVG renderer instead of Canvas for higher quality but potentially slower performance.",
+        "timezone_settings": "Timezone Settings",
+        "timezone_settings_desc": "Configure how time-based data is displayed across different timezones.",
+        "customOffset_desc": "Specify a custom timezone for displaying time-based data."
     },
     "constant": {
         "row_count": "Row count",
