--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -24,7 +24,23 @@
         "readHere": "ここを読む",
         "svg": "SVGを使う",
         "customTile": "地図タイルをカスタマイズ",
-        "customOffset": "タイムゾーンをカスタマイズ"
+        "customOffset": "タイムゾーンをカスタマイズ",
+        "map_settings": "地図設定",
+        "map_settings_desc": "地図の可視化の表示方法とカスタム地図タイルサービスの使用方法を設定します。",
+        "customTile_desc": "地理的可視化のためのカスタム地図タイルURLを指定します。",
+        "choropleth_settings": "コロプレス設定",
+        "choropleth_settings_desc": "コロプレス地図での地理的形状とデータの表示方法を制御します。",
+        "include_unmatched": "マッチしないコロプレスをスケールに含める",
+        "include_unmatched_desc": "カラースケールを計算する際にデータの一致がない地域を含めます。",
+        "include_shapes": "データのない形状を含める",
+        "include_shapes_desc": "関連するデータ値がなくても、すべての地理的形状を表示します。",
+        "visualization_settings": "可視化設定",
+        "visualization_settings_desc": "すべての可視化に対する一般的な設定を構成します。",
+        "zeroScale_desc": "データ範囲に合わせて自動スケーリングする代わりに、数値軸をゼロから始めるように強制します。",
+        "svg_desc": "高品質だがパフォーマンスが低下する可能性のあるSVGレンダラーを使用します。",
+        "timezone_settings": "タイムゾーン設定",
+        "timezone_settings_desc": "異なるタイムゾーン間での時間ベースのデータの表示方法を設定します。",
+        "customOffset_desc": "時間ベースのデータを表示するためのカスタムタイムゾーンを指定します。"
     },
     "constant": {
         "row_count": "行数",
