--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -24,7 +24,23 @@
         "readHere": "阅读此处",
         "svg": "使用SVG",
         "customTile": "使用自定义的地图区块",
-        "customOffset": "使用自定义的时区"
+        "customOffset": "使用自定义的时区",
+        "map_settings": "地图设置",
+        "map_settings_desc": "配置地图可视化显示方式和使用自定义地图瓦片服务。",
+        "customTile_desc": "为地理可视化指定自定义地图瓦片URL。",
+        "choropleth_settings": "区域图设置",
+        "choropleth_settings_desc": "控制区域图中地理形状和数据的显示方式。",
+        "include_unmatched": "在比例尺中包含未匹配的区域",
+        "include_unmatched_desc": "在计算颜色比例尺时包含没有数据匹配的区域。",
+        "include_shapes": "包含没有数据的形状",
+        "include_shapes_desc": "显示所有地理形状，即使它们没有关联的数据值。",
+        "visualization_settings": "可视化设置",
+        "visualization_settings_desc": "配置所有可视化的通用设置。",
+        "zeroScale_desc": "强制数值轴从零开始，而不是根据数据范围自动缩放。",
+        "svg_desc": "使用SVG渲染器代替Canvas，可获得更高质量但可能降低性能。",
+        "timezone_settings": "时区设置",
+        "timezone_settings_desc": "配置时间数据在不同时区之间的显示方式。",
+        "customOffset_desc": "为显示基于时间的数据指定自定义时区。"
     },
     "constant": {
         "row_count": "行数",
