--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -3,6 +3,7 @@
         "scheme": "方案",
         "primary_color": "主要颜色",
         "color_palette": "调色板",
+        "theme": "主题",
         "opacity": "不透明度",
         "default_color_palette": "默认",
         "size": "尺寸",
